# video-dehaze-rs

./: .gitignore  Cargo.toml  README.md
crates/: README.md
crates/dehaze-cli/: Cargo.toml
crates/dehaze-cli/src/: main.rs  runtime.rs
crates/dehaze-core/: Cargo.toml
crates/dehaze-core/src/: dcp.rs  lib.rs  metrics.rs
scripts/: README.md  dehaze.sh  demo_video.sh
scripts/data/: prepare_stage3_dataset.sh
scripts/eval/: run_stage3_iteration.sh
scripts/neural/: infer_neural_dehazer.py  model.py  train_infer_metrics.sh  train_neural_dehazer.py
